groupe de validation + dashboard

--- a/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
@@ -2,7 +2,7 @@
     <span class="align-text-bottom mt-1">Assister à des séances de tutorat :</span>
     <div class="ml-2">
         <input type="checkbox" data-toggle="toggle" data-style="ios" id="btn_tutoring" data-on="Oui"
-               data-off="non"
+               data-off="Non"
                data-action-title="Ajouter une séance de tutorat"
                data-action-url="{{ path('objective_course_tutoring_form', {'id': courseInfo.id }) }}"
                 {% if courseInfo.tutoring %}
