--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -3,17 +3,86 @@
         <div class="col-6">
             <div>
                 <div class="border p-2">
-                    <p>Parties du syllabus a remplir obligatoirement</p>
+                    <p class="title-bold-light">Parties du syllabus a remplir obligatoirement</p>
+                    <div class="row">
+                        <div class="col-6">
+                            <p>
+                                {% if violations['presentation'] is empty %}
+                                    <i class="fas fa-check text-success"></i>
+                                {% else %}
+                                    <i class="fas fa-times text-danger"></i>
+                                {% endif %}
+                                Présentation</p>
+                            <p>
+                                {% if violations['contentActivities'] is empty %}
+                                <i class="fas fa-check text-success"></i>
+                                {% else %}
+                                <i class="fas fa-times text-danger"></i>
+                                {% endif %}
+                                Contenu et activités</p>
+
+                            <p>
+                                {% if violations['objectives'] is empty %}
+                                <i class="fas fa-check text-success"></i>
+                                {% else %}
+                                <i class="fas fa-times text-danger"></i>
+                                {% endif %}
+                                Objectifs du cours</p>
+                            <p>
+                                {% if violations['evaluation'] is empty %}
+                                <i class="fas fa-check text-success"></i>
+                                {% else %}
+                                <i class="fas fa-times text-danger"></i>
+                                {% endif %}
+                                Modalités d'évaluation</p>
+                        </div>
+                        <div class="col-6">
+                            <p>{% if violations['equipment'] is empty %}
+                                <i class="fas fa-check text-success"></i>
+                                {% else %}
+                                <i class="fas fa-times text-danger"></i>
+                                {% endif %}
+                                Matériel et ressources</p>
+                            <p>
+                                {% if violations['info'] is empty %}
+                                <i class="fas fa-check text-success"></i>
+                                {% else %}
+                                <i class="fas fa-times text-danger"></i>
+                                {% endif %}
+                                Informations pratiques</p>
+                            <p>
+                                {% if violations['closingRemark'] is empty %}
+                                <i class="fas fa-check text-success"></i>
+                                {% else %}
+                                <i class="fas fa-times text-danger"></i>
+                                {% endif %}
+                                Le mot de la fin</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="mt-2">
                 <div class="border p-2">
-                    <p>Syllabus publié pour les étudiants</p>
+                    <p class="title-bold-light">Syllabus publié pour les étudiants</p>
+                    <div>
+                        <em>Vous devez remplir les champs obligatoires.</em></br>
+                        <div class="pt-2">
+                            <input type="checkbox" id="btn_publish" checked data-toggle="toggle" data-onstyle="primary"
+                                   data-on="Oui"
+                                   data-off="Non">
+                            <button type="button" class="btn btn-primary ml-5">Voir la version étudiante</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="mt-2">
                 <div class="border p-2">
-                    <p>Duplication du syllabus</p>
+                    <p class="title-bold-light">Duplication du syllabus pour l'année suivante</p>
+                    <div>
+                        <input type="checkbox" id="btn_duplicate" checked data-toggle="toggle" data-onstyle="primary"
+                               data-on="Oui"
+                               data-off="Non">
+                    </div>
                 </div>
             </div>
         </div>
@@ -33,4 +102,15 @@
             </div>
         </div>
     </div>
+    <div class="pt-4 text-center">
+        <button type="button" class="btn btn-light"><i class="fas fa-comment-dots"></i> Demander un avis (ingénieur
+            pédagogique)
+        </button>
+        <button type="button" class="btn btn-light">Donner un avis sur la plateforme</button>
+    </div>
+
 </div>
+<script>
+    $('#btn_publish').bootstrapToggle();
+    $('#btn_duplicate').bootstrapToggle();
+</script>
