--- a/app/Resources/views/course_info/activities/view/sidebar_sections.html.twig
+++ b/app/Resources/views/course_info/activities/view/sidebar_sections.html.twig
@@ -1,5 +1,6 @@
-<div class="bg-dark text-center p-3 col-sm" style="position: absolute; width: 250px; min-height: calc(100vh - 5.4rem - 3px);">
+<div class="sidebar-activities bg-dark text-center p-3 col-sm" >
     <h5>Sections</h5>
+    <button id="button-minimize">Mini</button>
     <hr class="mb-2">
     {% if courseInfo.courseSections is empty %}
         <div class="mb-1 text-warning">
