--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'admin_layout.html.twig' %}
-{% set h1 = ('list of ' ~ type) | trans %}
+{% set h1 = 'Liste des activités' %}
 {% block subContent %}
-    {% set isActivity = type is same as (constant('AppBundle\\Constant\\ActivityType::ACTIVITY')) %}
 
     <div class="card">
         <div class="card-header">
@@ -10,22 +9,12 @@
                     <div class="col-md-2">
                         {{ form_row(form.label) }}
                     </div>
-                    <div class="col-md-2">
-                        {{ form_row(form.mode) }}
-                    </div>
-                    {% if isActivity %}
-                        <div class="col-md-2">
-                            {{ form_row(form.grp) }}
-                        </div>
-                    {% endif %}
                     <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_activity_index', { 'type' : type })  }}">Réinitialiser les filtres</a>
+                        <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_activity_index')  }}">Réinitialiser les filtres</a>
                     </div>
-                    {% if not isActivity %}
                         <div class="offset-md-2"></div>
-                    {% endif %}
                     <div class="col-md-3 col-sm-6">
-                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new', { 'type' : type })  }}">Ajouter une {{ type|trans }}</a>
+                        <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new')  }}">Ajouter une activité</a>
                     </div>
                 </div>
             {{ form_end(form) }}
@@ -37,20 +26,24 @@
                     <thead>
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'a.label') }}</th>
-                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.mode'|trans, 'a.mode') }}</th>
-                        {% if isActivity %}
-                            <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.grp'|trans, 'a.grp') }}</th>
-                        {% endif %}
+                        <th>{{ 'app.form.activity.label.activityTypes'|trans }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.obsolete'|trans, 'a.obsolete') }}</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for activity in pagination %}
                         <tr>
-                            <td><a href="{{ path('app_admin_activity_edit', { 'id' : activity.id, 'type' : type}) }}">{{ activity.label }}</a></td>
-                            <td>{{ activity.mode|trans }}</td>
-                            {% if isActivity %}
-                                <td>{{ activity.grp|trans }}</td>
-                            {% endif %}
+                            <td>
+                                <a href="{{ path('app_admin_activity_edit', { 'id' : activity.id }) }}">{{ activity.label }}</a>
+                            </td>
+                            <td>
+                                {% for activityType in activity.activityTypes %}
+                                    {{ not loop.first ? ', ' }}{{ activityType }}
+                                {% endfor %}
+                            </td>
+                            <td>
+                                {{ activity.obsolete|humanizeBoolean }}
+                            </td>
                         </tr>
                     {% endfor %}
                     </tbody>
