--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -24,7 +24,7 @@
             </a>
         </li>
 
-        {% set referentielLink = ['app_admin_activity', 'app_admin_year', 'app_admin_evaluation', 'app_admin_equipment', 'app_admin_structure'] %}
+        {% set referentielLink = ['app_admin_activity', 'app_admin_year', 'app_admin_equipment', 'app_admin_structure'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
                 <i class="nav-icon fas fa-book"></i>
@@ -37,8 +37,7 @@
 
                 <li class="nav-item">
                     <a
-                            href="{{ path('app_admin_activity_index', { 'type' : constant('AppBundle\\Constant\\ActivityType::ACTIVITY')}) }}"
-                            class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity'], {'activityType' : [constant('AppBundle\\Constant\\ActivityType::ACTIVITY')] }) }}"
+                            href="{{ path('app_admin_activity_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity']) }}"
                     >
                         <i class="nav-icon fas fa-film"></i>
                         <p>
@@ -52,18 +51,6 @@
                         <i class="nav-icon fas fa-calendar"></i>
                         <p>
                             Années
-                        </p>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a
-                            href="{{ path('app_admin_activity_index', { 'type' : constant('AppBundle\\Constant\\ActivityType::EVALUATION')}) }}"
-                            class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity'], {'activityType' : [constant('AppBundle\\Constant\\ActivityType::EVALUATION')] }) }}"
-                    >
-                        <i class="nav-icon fas fa-vial"></i>
-                        <p>
-                            Evaluations
                         </p>
                     </a>
                 </li>
