--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -38,10 +38,7 @@
                 style="display: {{ printActiveAdminSidebarLink(referentielLink) ? 'block' : 'none' }};">
 
                 <li class="nav-item has-treeview">
-                    <a href="#"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity'], {'activityType' : [constant('AppBundle\\Constant\\ActivityType::ACTIVITY')] }) }}"
-                            href="{{ path('app_admin_activity_index') }}" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity']) }}"
-                    >
+                    <a href="#" class="nav-link {{ printActiveAdminSidebarLink(['app_admin_activity']) }}">
                         <i class="nav-icon fas fa-film"></i>
                         <p>
                             Activités
@@ -51,10 +48,18 @@
                     <ul class="nav nav-treeview"
                         style="display: {{ printActiveAdminSidebarLink(referentielLink) ? 'block' : 'none' }};">
                         <li>
-                            <a href="{{ path('app_admin_type_activity_index') }}" class="nav-link">
-                                <i class="fas fa-dot-circle"></i>
+                            <a href="{{ path('app_admin_activity_index') }}" class="nav-link">
+                                <i class="fas fa-dot-circle nav-icon"></i>
                                 <p>
-                                    Type
+                                    Activités
+                                </p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('app_admin_type_activity_index') }}" class="nav-link">
+                                <i class="fas fa-dot-circle nav-icon"></i>
+                                <p>
+                                    Types
                                 </p>
                             </a>
                         </li>
