--- a/app/Resources/views/course_info/activities/view/activity_content.html.twig
+++ b/app/Resources/views/course_info/activities/view/activity_content.html.twig
@@ -12,7 +12,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-sm">
                             <dt>Nom de l'activité</dt>
                             <dd>
                                 {{ sectionActivity.activity.label }}
@@ -21,25 +21,15 @@
                             <dd>
                                 {{ sectionActivity.activityType.label }} - {{ sectionActivity.activityMode.label }}
                             </dd>
-                            <button type="button" class="btn text-primary modal-action pl-0"
-                                    data-action-title="Modifier une activité"
-                                    data-action-url="{{ path('course_activities_edit_activity', {'courseSectionActivityId': sectionActivity.id, 'activityId': sectionActivity.activity.id }) }}">
-                                <i class="fas fa-edit"></i> Modifier
-                            </button>
-                            <button type="button" class="btn text-danger modal-action p-0"
-                                    data-action-title="Supprimer une activité"
-                                    data-action-url="{{ path('course_activities_remove_activity', {'sectionId': activeSection.id, 'courseSectionActivityId': sectionActivity.id }) }}">
-                                <i class="fas fa-trash-alt text-danger"></i> Supprimer
-                            </button>
                         </div>
-                        <div class="col">
+                        <div class="col-sm">
                             <dt>Evaluable</dt>
                             <dd>
                                 {{ sectionActivity.evaluable ? 'Oui' : 'Non' }}
                             </dd>
                         </div>
                         {% if sectionActivity.evaluable %}
-                            <div class="col-4">
+                            <div class="col-sm">
                                 <div class="row">
                                     <div class="col">
                                         <dt>Contrôle : </dt>
@@ -66,6 +56,18 @@
                                 </dd>
                             </div>
                         {% endif %}
+                    </div>
+                    <div>
+                        <button type="button" class="btn text-primary modal-action pl-0"
+                                data-action-title="Modifier une activité"
+                                data-action-url="{{ path('course_activities_edit_activity', {'courseSectionActivityId': sectionActivity.id, 'activityId': sectionActivity.activity.id }) }}">
+                            <i class="fas fa-edit"></i> Modifier
+                        </button>
+                        <button type="button" class="btn text-danger modal-action p-0"
+                                data-action-title="Supprimer une activité"
+                                data-action-url="{{ path('course_activities_remove_activity', {'sectionId': activeSection.id, 'courseSectionActivityId': sectionActivity.id }) }}">
+                            <i class="fas fa-trash-alt text-danger"></i> Supprimer
+                        </button>
                     </div>
                 </div>
             </div>
