--- a/app/Resources/views/course_info/activities/view/sidebar_sections.html.twig
+++ b/app/Resources/views/course_info/activities/view/sidebar_sections.html.twig
@@ -1,41 +1,42 @@
-<div class="sidebar-activities bg-dark text-center p-3 col-sm" >
-    <h5>Sections</h5>
-    <button id="button-minimize">Mini</button>
-    <hr class="mb-2">
-    {% if courseInfo.courseSections is empty %}
-        <div class="mb-1 text-warning">
-            Aucune section n'a été créée
+<div class="sidebar-activities bg-dark text-center p-0 col">
+    <div class="p-3" style="width: 250px;">
+        <h5>Sections</h5>
+        <hr class="mb-2">
+        {% if courseInfo.courseSections is empty %}
+            <div class="mb-1 text-warning">
+                Aucune section n'a été créée
+            </div>
+        {% else %}
+            <ul class="nav nav-pills flex-column">
+                {% for section in courseInfo.courseSections %}
+                    <li class="nav-item {% if section is same as (activeSection) %}active{% endif %}">
+                        <a class="d-inline-block text-truncate nav-link menu-tab text-white align-middle" href="{{ path('course_activities', { 'id': courseInfo.id, 'sectionId': section.id }) }}">
+                            {{ section.title }}
+                        </a>
+                        <button class="btn dropdown-icon float-right text-white" type="button" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v"></i> </button>
+                        <div class="dropdown-menu">
+                            <button type="button" class="dropdown-item modal-action text-center"
+                                    data-action-title="Modifier une section"
+                                    data-action-url="{{ path('course_activities_edit_section', {'id': courseInfo.id, 'sectionId': section.id}) }}">
+                                Modifier
+                            </button>
+                            <button type="button" class="dropdown-item modal-action text-center"
+                                    data-action-title="Supprimer une section"
+                                    data-action-url="{{ path('course_activities_remove_section', {'id': courseInfo.id, 'sectionId': section.id}) }}">
+                                Supprimer
+                            </button>
+                        </div>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        <hr class="mb-2">
+        <div class="mb-1">
+            <button type="button" class="btn btn-link modal-action p-0 text-primary"
+                    data-action-title="Ajouter une section"
+                    data-action-url="{{ path('course_activities_add_section', {'id': courseInfo.id}) }}">
+                <i class="fas fa-plus-circle"></i> Ajouter une section
+            </button>
         </div>
-    {% else %}
-        <ul class="nav nav-pills flex-column">
-            {% for section in courseInfo.courseSections %}
-                <li class="nav-item {% if section is same as (activeSection) %}active{% endif %}">
-                    <a class="d-inline-block text-truncate nav-link menu-tab text-white align-middle" href="{{ path('course_activities', { 'id': courseInfo.id, 'sectionId': section.id }) }}">
-                        {{ section.title }}
-                    </a>
-                    <button class="btn dropdown-icon float-right text-white" type="button" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-ellipsis-v"></i> </button>
-                    <div class="dropdown-menu">
-                        <button type="button" class="dropdown-item modal-action text-center"
-                                data-action-title="Modifier une section"
-                                data-action-url="{{ path('course_activities_edit_section', {'id': courseInfo.id, 'sectionId': section.id}) }}">
-                            Modifier
-                        </button>
-                        <button type="button" class="dropdown-item modal-action text-center"
-                                data-action-title="Supprimer une section"
-                                data-action-url="{{ path('course_activities_remove_section', {'id': courseInfo.id, 'sectionId': section.id}) }}">
-                            Supprimer
-                        </button>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    <hr class="mb-2">
-    <div class="mb-1">
-        <button type="button" class="btn btn-link modal-action p-0 text-primary"
-                data-action-title="Ajouter une section"
-                data-action-url="{{ path('course_activities_add_section', {'id': courseInfo.id}) }}">
-            <i class="fas fa-plus-circle"></i> Ajouter une section
-        </button>
     </div>
 </div>
