--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -9,6 +9,10 @@
                     <div class="col-md-2">
                         {{ form_row(form.label) }}
                     </div>
+                    <div class="col-md-2">
+                        {{ form_label(form.activityTypes.label, 'app.form.activity.label.activityTypes'|trans) }}
+                        {{ form_widget(form.activityTypes.label) }}
+                    </div>
                     <div class="col-md-3 col-sm-6">
                         <a class="btn btn-danger" style="margin-top: 32px" href="{{  path('app_admin_activity_index')  }}">Réinitialiser les filtres</a>
                     </div>
@@ -17,6 +21,7 @@
                         <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_activity_new')  }}">Ajouter une activité</a>
                     </div>
                 </div>
+            <input type="submit" style="position: absolute; left: -9999px"/>
             {{ form_end(form) }}
         </div>
 
