Add description field in activity forms

--- a/app/Resources/views/activity/edit.html.twig
+++ b/app/Resources/views/activity/edit.html.twig
@@ -7,8 +7,8 @@
         <!-- form start -->
         {{ form_start(form) }}
         <div class="card-body">
-
             {{ form_row(form.label) }}
+            {{ form_row(form.description) }}
             {{ form_row(form.activityTypes) }}
             <div class="custom-control custom-switch">
                 {{ form_row(form.obsolete) }}
